<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="handlers" type="com.swetha.locationtask.MainActivity.MyClickHandlers"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_reports_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/header"
                style="@style/headerStyle"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_weather_details_as_per_the_location"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/content" android:layout_margin="16dp"
        />
        <Button android:layout_width="wrap_content"
                android:onClick="@{(view) -> handlers.onAddLocClicked()}"
                android:text="@string/add_location"
                android:id="@+id/add_loc_btn" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/content" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/recyclerView"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/add_loc_btn"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/recyclerView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>